[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/Apollo_LM.png" type="Texture" id=1]
[ext_resource path="res://images/gray8x8.png" type="Texture" id=2]
[ext_resource path="res://MainScene.gd" type="Script" id=3]
[ext_resource path="res://fonts/arialbd.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=2]
0/name = "gray8x8.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.5, 21.5 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="InfoBar" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 64.0
color = Color( 0.627451, 0.627451, 0.627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="InfoBar"]
margin_left = 20.0
margin_top = 19.0
margin_right = 127.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPeed: 0, 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 4456560, 0, 0, 4522095, 0, 0, 4522096, 0, 0, 4522097, 0, 0, 4587629, 0, 0, 4587630, 0, 0, 4587631, 0, 0, 4587632, 0, 0, 4587633, 0, 0, 4587634, 0, 0, 4653164, 0, 0, 4653165, 0, 0, 4653166, 0, 0, 4653167, 0, 0, 4653168, 0, 0, 4653169, 0, 0, 4653170, 0, 0, 4653171, 0, 0, 4718699, 0, 0, 4718700, 0, 0, 4718701, 0, 0, 4718702, 0, 0, 4718703, 0, 0, 4718704, 0, 0, 4718705, 0, 0, 4718706, 0, 0, 4718707, 0, 0, 4718708, 0, 0, 4718713, 0, 0, 4718714, 0, 0, 4784234, 0, 0, 4784235, 0, 0, 4784236, 0, 0, 4784237, 0, 0, 4784238, 0, 0, 4784239, 0, 0, 4784240, 0, 0, 4784241, 0, 0, 4784242, 0, 0, 4784243, 0, 0, 4784244, 0, 0, 4784245, 0, 0, 4784248, 0, 0, 4784249, 0, 0, 4784250, 0, 0, 4784251, 0, 0, 4849763, 0, 0, 4849764, 0, 0, 4849765, 0, 0, 4849766, 0, 0, 4849767, 0, 0, 4849769, 0, 0, 4849770, 0, 0, 4849771, 0, 0, 4849772, 0, 0, 4849773, 0, 0, 4849774, 0, 0, 4849775, 0, 0, 4849776, 0, 0, 4849777, 0, 0, 4849778, 0, 0, 4849779, 0, 0, 4849780, 0, 0, 4849781, 0, 0, 4849782, 0, 0, 4849783, 0, 0, 4849784, 0, 0, 4849785, 0, 0, 4849786, 0, 0, 4849787, 0, 0, 4849788, 0, 0, 4915202, 0, 0, 4915214, 0, 0, 4915215, 0, 0, 4915216, 0, 0, 4915286, 0, 0, 4915287, 0, 0, 4915288, 0, 0, 4915289, 0, 0, 4915290, 0, 0, 4915291, 0, 0, 4915292, 0, 0, 4915298, 0, 0, 4915299, 0, 0, 4915300, 0, 0, 4915301, 0, 0, 4915302, 0, 0, 4915303, 0, 0, 4915304, 0, 0, 4915305, 0, 0, 4915306, 0, 0, 4915307, 0, 0, 4915308, 0, 0, 4915309, 0, 0, 4915310, 0, 0, 4915311, 0, 0, 4915312, 0, 0, 4915313, 0, 0, 4915314, 0, 0, 4915315, 0, 0, 4915316, 0, 0, 4915317, 0, 0, 4915318, 0, 0, 4915319, 0, 0, 4915320, 0, 0, 4915321, 0, 0, 4915322, 0, 0, 4915323, 0, 0, 4915324, 0, 0, 4915325, 0, 0, 4915326, 0, 0, 4980737, 0, 0, 4980738, 0, 0, 4980739, 0, 0, 4980748, 0, 0, 4980749, 0, 0, 4980750, 0, 0, 4980751, 0, 0, 4980752, 0, 0, 4980753, 0, 0, 4980754, 0, 0, 4980755, 0, 0, 4980772, 0, 0, 4980773, 0, 0, 4980774, 0, 0, 4980820, 0, 0, 4980821, 0, 0, 4980822, 0, 0, 4980823, 0, 0, 4980824, 0, 0, 4980825, 0, 0, 4980826, 0, 0, 4980827, 0, 0, 4980828, 0, 0, 4980829, 0, 0, 4980830, 0, 0, 4980831, 0, 0, 4980832, 0, 0, 4980833, 0, 0, 4980834, 0, 0, 4980835, 0, 0, 4980836, 0, 0, 4980837, 0, 0, 4980838, 0, 0, 4980839, 0, 0, 4980840, 0, 0, 4980841, 0, 0, 4980842, 0, 0, 4980843, 0, 0, 4980844, 0, 0, 4980845, 0, 0, 4980846, 0, 0, 4980847, 0, 0, 4980848, 0, 0, 4980849, 0, 0, 4980850, 0, 0, 4980851, 0, 0, 4980852, 0, 0, 4980853, 0, 0, 4980854, 0, 0, 4980855, 0, 0, 4980856, 0, 0, 4980857, 0, 0, 4980858, 0, 0, 4980859, 0, 0, 4980860, 0, 0, 4980861, 0, 0, 4980862, 0, 0, 4980863, 0, 0, 5046272, 0, 0, 5046273, 0, 0, 5046274, 0, 0, 5046275, 0, 0, 5046276, 0, 0, 5046277, 0, 0, 5046278, 0, 0, 5046280, 0, 0, 5046281, 0, 0, 5046282, 0, 0, 5046283, 0, 0, 5046284, 0, 0, 5046285, 0, 0, 5046286, 0, 0, 5046287, 0, 0, 5046288, 0, 0, 5046289, 0, 0, 5046290, 0, 0, 5046291, 0, 0, 5046292, 0, 0, 5046300, 0, 0, 5046301, 0, 0, 5046302, 0, 0, 5046303, 0, 0, 5046304, 0, 0, 5046305, 0, 0, 5046306, 0, 0, 5046307, 0, 0, 5046308, 0, 0, 5046309, 0, 0, 5046310, 0, 0, 5046311, 0, 0, 5046312, 0, 0, 5046317, 0, 0, 5046353, 0, 0, 5046354, 0, 0, 5046355, 0, 0, 5046356, 0, 0, 5046357, 0, 0, 5046358, 0, 0, 5046359, 0, 0, 5046360, 0, 0, 5046361, 0, 0, 5046362, 0, 0, 5046363, 0, 0, 5046364, 0, 0, 5046365, 0, 0, 5046366, 0, 0, 5046367, 0, 0, 5046368, 0, 0, 5046369, 0, 0, 5046370, 0, 0, 5046371, 0, 0, 5046372, 0, 0, 5046373, 0, 0, 5046374, 0, 0, 5046375, 0, 0, 5046376, 0, 0, 5046377, 0, 0, 5046378, 0, 0, 5046379, 0, 0, 5046380, 0, 0, 5046381, 0, 0, 5046382, 0, 0, 5046383, 0, 0, 5046384, 0, 0, 5046385, 0, 0, 5046386, 0, 0, 5046387, 0, 0, 5046388, 0, 0, 5046389, 0, 0, 5046390, 0, 0, 5046391, 0, 0, 5046392, 0, 0, 5046393, 0, 0, 5046394, 0, 0, 5046395, 0, 0, 5046396, 0, 0, 5046397, 0, 0, 5046398, 0, 0, 5046399, 0, 0, 5111808, 0, 0, 5111809, 0, 0, 5111810, 0, 0, 5111811, 0, 0, 5111812, 0, 0, 5111813, 0, 0, 5111814, 0, 0, 5111815, 0, 0, 5111816, 0, 0, 5111817, 0, 0, 5111818, 0, 0, 5111819, 0, 0, 5111820, 0, 0, 5111821, 0, 0, 5111822, 0, 0, 5111823, 0, 0, 5111824, 0, 0, 5111825, 0, 0, 5111826, 0, 0, 5111827, 0, 0, 5111828, 0, 0, 5111829, 0, 0, 5111830, 0, 0, 5111831, 0, 0, 5111832, 0, 0, 5111833, 0, 0, 5111834, 0, 0, 5111835, 0, 0, 5111836, 0, 0, 5111837, 0, 0, 5111838, 0, 0, 5111839, 0, 0, 5111840, 0, 0, 5111841, 0, 0, 5111842, 0, 0, 5111843, 0, 0, 5111844, 0, 0, 5111845, 0, 0, 5111846, 0, 0, 5111847, 0, 0, 5111848, 0, 0, 5111849, 0, 0, 5111850, 0, 0, 5111851, 0, 0, 5111852, 0, 0, 5111853, 0, 0, 5111854, 0, 0, 5111855, 0, 0, 5111856, 0, 0, 5111887, 0, 0, 5111888, 0, 0, 5111889, 0, 0, 5111890, 0, 0, 5111891, 0, 0, 5111892, 0, 0, 5111893, 0, 0, 5111894, 0, 0, 5111895, 0, 0, 5111896, 0, 0, 5111897, 0, 0, 5111898, 0, 0, 5111899, 0, 0, 5111900, 0, 0, 5111901, 0, 0, 5111902, 0, 0, 5111903, 0, 0, 5111904, 0, 0, 5111905, 0, 0, 5111906, 0, 0, 5111907, 0, 0, 5111908, 0, 0, 5111909, 0, 0, 5111910, 0, 0, 5111911, 0, 0, 5111912, 0, 0, 5111913, 0, 0, 5111914, 0, 0, 5111915, 0, 0, 5111916, 0, 0, 5111917, 0, 0, 5111918, 0, 0, 5111919, 0, 0, 5111920, 0, 0, 5111921, 0, 0, 5111922, 0, 0, 5111923, 0, 0, 5111924, 0, 0, 5111925, 0, 0, 5111926, 0, 0, 5111927, 0, 0, 5111928, 0, 0, 5111929, 0, 0, 5111930, 0, 0, 5111931, 0, 0, 5111932, 0, 0, 5111933, 0, 0, 5111934, 0, 0, 5111935, 0, 0, 5177344, 0, 0, 5177345, 0, 0, 5177346, 0, 0, 5177347, 0, 0, 5177348, 0, 0, 5177349, 0, 0, 5177350, 0, 0, 5177351, 0, 0, 5177352, 0, 0, 5177353, 0, 0, 5177354, 0, 0, 5177355, 0, 0, 5177356, 0, 0, 5177357, 0, 0, 5177358, 0, 0, 5177359, 0, 0, 5177360, 0, 0, 5177361, 0, 0, 5177362, 0, 0, 5177363, 0, 0, 5177364, 0, 0, 5177365, 0, 0, 5177366, 0, 0, 5177367, 0, 0, 5177368, 0, 0, 5177369, 0, 0, 5177370, 0, 0, 5177371, 0, 0, 5177372, 0, 0, 5177373, 0, 0, 5177374, 0, 0, 5177375, 0, 0, 5177376, 0, 0, 5177377, 0, 0, 5177378, 0, 0, 5177379, 0, 0, 5177380, 0, 0, 5177381, 0, 0, 5177382, 0, 0, 5177383, 0, 0, 5177384, 0, 0, 5177385, 0, 0, 5177386, 0, 0, 5177387, 0, 0, 5177388, 0, 0, 5177389, 0, 0, 5177390, 0, 0, 5177391, 0, 0, 5177392, 0, 0, 5177393, 0, 0, 5177394, 0, 0, 5177395, 0, 0, 5177396, 0, 0, 5177397, 0, 0, 5177398, 0, 0, 5177399, 0, 0, 5177400, 0, 0, 5177401, 0, 0, 5177402, 0, 0, 5177403, 0, 0, 5177404, 0, 0, 5177405, 0, 0, 5177406, 0, 0, 5177407, 0, 0, 5177408, 0, 0, 5177409, 0, 0, 5177410, 0, 0, 5177411, 0, 0, 5177412, 0, 0, 5177413, 0, 0, 5177414, 0, 0, 5177415, 0, 0, 5177416, 0, 0, 5177417, 0, 0, 5177418, 0, 0, 5177419, 0, 0, 5177420, 0, 0, 5177421, 0, 0, 5177422, 0, 0, 5177423, 0, 0, 5177424, 0, 0, 5177425, 0, 0, 5177426, 0, 0, 5177427, 0, 0, 5177428, 0, 0, 5177429, 0, 0, 5177430, 0, 0, 5177431, 0, 0, 5177432, 0, 0, 5177433, 0, 0, 5177434, 0, 0, 5177435, 0, 0, 5177436, 0, 0, 5177437, 0, 0, 5177438, 0, 0, 5177439, 0, 0, 5177440, 0, 0, 5177441, 0, 0, 5177442, 0, 0, 5177443, 0, 0, 5177444, 0, 0, 5177445, 0, 0, 5177446, 0, 0, 5177447, 0, 0, 5177448, 0, 0, 5177449, 0, 0, 5177450, 0, 0, 5177451, 0, 0, 5177452, 0, 0, 5177453, 0, 0, 5177454, 0, 0, 5177455, 0, 0, 5177456, 0, 0, 5177457, 0, 0, 5177458, 0, 0, 5177459, 0, 0, 5177460, 0, 0, 5177461, 0, 0, 5177462, 0, 0, 5177463, 0, 0, 5177464, 0, 0, 5177465, 0, 0, 5177466, 0, 0, 5177467, 0, 0, 5177468, 0, 0, 5177469, 0, 0, 5177470, 0, 0, 5177471, 0, 0 )

[node name="LunaModule" type="KinematicBody2D" parent="."]
position = Vector2( 512, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="LunaModule"]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LunaModule"]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 4 )
